--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,19 +5,13 @@
 }
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  font-family: 'Roboto', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+main {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
 }
 
 a {
@@ -51,6 +45,11 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+h1 > svg {
+  margin-bottom: -7px;
+  margin-right: 10px;
 }
 
 @media (prefers-color-scheme: light) {
